# openenvhack

./: .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
db_er/: __init__.py  client.py  models.py
server/: __init__.py  app.py  environment.py  fixtures.py  grader.py  safety.py
tests/: __init__.py  test_dumb_agent.py  test_environment.py  test_grader.py  test_safety.py
